# kansatsu

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ez_example.py  geometry_tools_example.py  physio_assistant.py
src/kansatsu/: __init__.py  agent.py  dashboard.py
tests/: test_agent.py
